primeiro intento de colecións

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 name: i-rochiño
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+collections:
+  som:
+    output:true
+    permalink: /som/:path
 gems:
   - jekyll-sitemap
