--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 name: i-rochiño
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+exclude: [vendor] #Travis bundles all gems in the vendor directory on its build servers, which Jekyll will mistakenly read and explode on.
 collections:
   som:
     output : true
