--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-language: ruby
-rvm:
-  - 2.2.5
-script:
-  - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --only-4xx --check-html --check-favicon 
-env:
-  global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+# language: ruby
+# rvm:
+#   - 2.2.5
+# script:
+#   - bundle exec jekyll build
+#   - bundle exec htmlproofer ./_site --only-4xx --check-html --check-favicon
+# env:
+#   global:
+#     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 #sudo: false # route your build to the container-based infrastructure for a faster build
 # safelist
