--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /blog/:year/:month/:day/:title
 exclude: [vendor] #Travis bundles all gems in the vendor directory on its build servers, which Jekyll will mistakenly read and explode on.
 gems:
   - jekyll-sitemap
-
+  - jekyll-pdf
 collections:
   som:
     output : true
