carpeta codificar, _codificar, modificado _layouts, _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,6 @@ collections:
   placa:
     output : true
     permalink : /placa/:path/
+  codificar:
+    output : true
+    permalink : /codificar/:path/
