git config --global credential.helper osxkeychain

--- a/_config.yml
+++ b/_config.yml
@@ -28,4 +28,4 @@ collections:
     output : true
     permalink : /codificar/:path/
 
-    # FIXME definir aquí a coleción: o novo apartado
+    # FIXME definir aquí a coleción: o novo apartado que vou meter
