--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ name: i-rochiño
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 exclude: [vendor] #Travis bundles all gems in the vendor directory on its build servers, which Jekyll will mistakenly read and explode on.
-gems:
-  - jekyll-sitemap
+
 collections:
   som:
     output : true
@@ -29,9 +28,9 @@ collections:
   perifericos:
     output : true
     permalink : /perifericos/:path/
-  js:
+  javascript:
     output : true
-    permalink : /js/:path/
+    permalink : /javascript/:path/
 
-    # FIXME definir aquí a coleción: o novo apartado que vou meter  - jekyll-pdf
+    # FIXME definir aquí a coleción: o novo apartado que vou meter gems:- jekyll-sitemap - jekyll-pdf
 
