mellorado co curso de platega. Reorganizado un chisco

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ collections:
   memoria:
     output: true
     permalink: /memoria/:path/
+  procesador:
+    output: true
+    permalink: /procesador/:path/
   placa:
     output: true
     permalink: /placa/:path/
